# repopulse-mcp

./: .env.example  .gitignore  DESCRIPTION.md  Dockerfile  HANDOFF.md  LICENSE  MANIFESTO.md  README.md  codex.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MCP_CLIENTS.md  TROUBLESHOOTING.md
src/repopulse/: __init__.py  __main__.py  config.py  content_safety.py  languages.py  logging.py  paths.py  tree_types.py
src/repopulse/cli/: __init__.py  app.py  format.py  install.py
src/repopulse/indexer/: __init__.py  chunker.py  hasher.py  run.py  symbols.py  walker.py
src/repopulse/mcp_server/: __init__.py  server.py
src/repopulse/retrieval/: __init__.py  dense.py  fts.py  graph.py  hybrid.py  rrf.py  store.py
src/repopulse/trace/: __init__.py  ids.py  store.py  sufficiency.py  writer.py
tests/: conftest.py  test_chunker.py  test_cli_smoke.py  test_config.py  test_fts.py  test_hybrid.py  test_indexer.py  test_install.py  test_mcp_contract.py  test_rrf.py  test_security.py  test_store.py  test_story.py  test_sufficiency.py  test_symbols.py  test_trace_store.py  test_walker.py
tests/fixtures/tiny_repo/: .gitignore  README.md
tests/fixtures/tiny_repo/pkg/: index.ts
tests/fixtures/tiny_repo/src/: app.py  throttle.py
