[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "repopulse-mcp"
version = "0.1.0"
description = "Local-first code retrieval for coding agents, with a visible trace of every retrieval."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "evilander" },
]
keywords = ["mcp", "code-search", "retrieval", "rag", "claude-code", "cursor", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = [
  "mcp>=1.23.0,<2.0",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.6,<3",
  "httpx>=0.28.1,<1.0",
  "typer>=0.16.0,<1.0",
  "rich>=15.0,<16",
  "structlog>=25.4,<26",
  "pathspec>=1.0.4,<2",
  "tree-sitter>=0.25,<0.26",
  "tree-sitter-language-pack>=1.6.2,<2",
]

[project.optional-dependencies]
embeddings = [
  "fastembed>=0.8,<0.9",
  "sqlite-vec>=0.1.9,<0.2",
]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-asyncio>=1.3,<2",
  "pytest-cov>=5",
  "ruff>=0.8",
  "mypy>=1.11",
]

[project.scripts]
repopulse = "repopulse.cli.app:main"

[project.urls]
Homepage = "https://github.com/evilander/repopulse-mcp"
Repository = "https://github.com/evilander/repopulse-mcp"
Issues = "https://github.com/evilander/repopulse-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/repopulse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "B",
  "UP",
  "SIM",
  "RUF",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
"src/repopulse/cli/app.py" = ["B008"]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:tree_sitter.*",
]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
show_error_codes = true
exclude = ["^tests/fixtures/"]

[[tool.mypy.overrides]]
module = [
  "tree_sitter_language_pack.*",
  "fastembed.*",
  "sqlite_vec.*",
]
ignore_missing_imports = true
